# aer-engine

./: LICENSE  README.md
demos/: CMakeLists.txt
demos/aura/: CMakeLists.txt  application.cc  application.h  character.cc  character.h  hbao_pass.cc  hbao_pass.h  main.cc  skm_model.cc  skm_model.h  skydome.cc  skydome.h
demos/aura/data/models/sintel/: sintel.mat  sintel.ska  sintel.skm
demos/aura/data/shaders/: BlurAO.glsl  DispAxis.glsl  FillBuffer.glsl  HBAO.glsl  LinearizeDepth.glsl  MapScreen.glsl  Noise.glsl  Shadowmap.glsl  Skinning.glsl  SkyDome.glsl
demos/cuda_cs_blur/: CMakeLists.txt  _kernel_postprocess.cu  application.cc  application.h  cuda_tools.h  kernel_postprocess.cuh  main.cc
demos/cuda_cs_blur/data/shaders/: MapScreen.glsl  PassThrough.glsl  PostProcess.glsl
demos/gpu_raymarching/: CMakeLists.txt  main.cc
demos/gpu_raymarching/data/shaders/: MapScreen.glsl
demos/hair/: CMakeLists.txt  application.cc  application.h  hair_simulation.cc  hair_simulation.h  main.cc
demos/hair/data/model/: scalp.skm
demos/hair/data/shaders/: HairGen.glsl  PassThrough.glsl
demos/ik_demo/: CMakeLists.txt  application.cc  application.h  base_ik_chain.cc  base_ik_chain.h  base_ik_node.h  main.cc
demos/ik_demo/data/shaders/: PassThrough.glsl
demos/marcheur/: CMakeLists.txt  application.cc  application.h  character.cc  character.h  main.cc  skm_model.cc  skm_model.h
demos/marcheur/data/blendfile/: marcheur.blend  marcheur.blend1  marcheur.blend2
demos/marcheur/data/models/walker/: walker.mat  walker.ska  walker.skm
demos/marcheur/data/shaders/: Moon.glsl  Skinning.glsl  Terrain.glsl
demos/marching_cube/: CMakeLists.txt  application.cc  application.h  lut_array.inc  main.cc  marching_cube_renderer.cc  marching_cube_renderer.h
demos/marching_cube/data/: help_message
demos/marching_cube/data/shaders/: 1_BuildDensityVolume.glsl  2_ListTriangle.glsl  3_GenVertices.glsl  Density.glsl  DispDensityVolume.glsl  Noise.glsl  PassThrough.glsl
demos/simple_hair/: CMakeLists.txt  application.cc  application.h  hair_simulation.cc  hair_simulation.h  main.cc
demos/simple_hair/data/shaders/: HairGen.glsl
demos/variance_shadow_mapping/: CMakeLists.txt  application.cc  application.h  main.cc
demos/variance_shadow_mapping/data/shaders/: Blur_rg16f.glsl  Shadowmap.glsl
engine/: CMakeLists.txt
engine/aer/: CMakeLists.txt  aer.h  common.h
engine/aer/_exp_/: _debug_renderer.h  _material_proxy.h  _texture_cubemap.h  bvh_node.h  bvh_tree.cc_  bvh_tree.h  index_sorter.h
engine/aer/_exp_/CHC_wip/: TestApp  __CHCull.cpp  __CHCull.hpp
engine/aer/_exp_/shader_stuff/: _compute_program.h  _ideas_  _shader_compiler.h
engine/aer/animation/: blend_node.h  blend_shape.cc  blend_shape.h  blend_tree.cc  blend_tree.h  common.h  morph_controller.cc  morph_controller.h  skeleton.cc  skeleton.h  skeleton_controller.cc  skeleton_controller.h
engine/aer/animation/_wip_/: _joint_control.h  action_state.cc  action_state.h  action_state_machine.cc  action_state_machine.h  layered_asm.cc  layered_asm.h
engine/aer/app/: application.cc  application.h  display.h  event_button.h  events_handler.cc  events_handler.h  window.cc  window.h
engine/aer/core/: algebra_types.h  defs.h  opengl.cc  opengl.h  types.h
engine/aer/device/: default_samplers.cc  default_samplers.h  device_buffer.h  device_resource.h  framebuffer.cc  framebuffer.h  program-inl.h  program.h  program_pipeline.h  render_target.h  sampler.h  shader.cc  shader.h  texture.h  texture_2d.cc  texture_2d.h  texture_3d.cc  texture_3d.h  texture_buffer.h  transform_feedback.h  vertex_array.h
engine/aer/loader/: image_2d.cc  image_2d.h  shader_proxy.cc  shader_proxy.h  skeleton_proxy.h  skm_proxy.cc  skm_proxy.h  skma.cc  skma.h  skma_utils.cc  skma_utils.h  texture_2d_proxy.cc  texture_2d_proxy.h
engine/aer/memory/: pool_allocator.cc  pool_allocator.h  resource_proxy-inl.h  resource_proxy.h  stack_allocator.cc  stack_allocator.h
engine/aer/physic/: ik_chain.cc  ik_chain.h  ik_node.cc  ik_node.h  ik_solver.cc  ik_solver.h  particle_system.h  verlet_integrator.cc  verlet_integrator.h
engine/aer/rendering/: drawable.h  mapscreen.h  material-inl.h  material.h  mesh.cc  mesh.h  shape.cc  shape.h
engine/aer/utils/: float_packing.cc  float_packing.h  global_clock.cc  global_clock.h  logger.h  path.cc  path.h  singleton.h  timer.h
engine/aer/view/: camera-inl.h  camera.h  free_camera.cc  free_camera.h  frustum-inl.h  frustum.h  view-inl.h  view.h  view_interface.h
